--- a/templates/changelogs.html
+++ b/templates/changelogs.html
@@ -4,10 +4,7 @@
     <h5>Info: Do not fill in keyword fields to reset search results</h5>
     <h5 style="margin:6px 2px 2px 6px;">Version 1.0.0</h5>
     <ul style="padding: 1px 0 1px 20px;font-size:14px;margin-bottom:2px;">
-      <li style="margin-right:0px;margin-bottom:3px;">Poet Database<b>(poetrydb.org)</b></li>
-      <li style="margin-right:0px;margin-bottom:3px;">Random Advice<b>(adviceslip.com)</b></li>
-      <li style="margin-right:0px;margin-bottom:3px;">Random Quote<b>(quotable.io)</b></li>
-      <li style="margin-right:0px;margin-bottom:3px;">Inspiration Quote <b>(inspiration.goprogram.ai)</b></li>
+      <li style="margin-right:0px;margin-bottom:3px;">1st version</li>
     </ul>
   </div>
 </div>
