--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,16 @@
 <div class="kui-flex-wrap">
+  <style>
+    pre {
+      white-space: nowrap; 
+      width: 220px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  </style>
   <ul class="kui-list kai-container" style="font-size:14px;width:240px;">
     {{#filtered}}
     <li class="homeNav kui-divider">
-      <pre>{{ name }}</pre>
+      <pre style="font-size:14px;">{{ name }}</pre>
     </li>
     {{/filtered}}
   </ul>
