--- a/templates/guide.html
+++ b/templates/guide.html
@@ -1,10 +1,11 @@
 <div class="kui-flex-wrap">
   <style>.kui-software-key{height:0px}#__kai_router__{height:266px!important;}.kui-router-m-bottom{margin-bottom:0px!important;}</style>
   <div class="kai-container" style="margin:2px;">
-    <h5 style="margin:6px 2px 2px 6px;">Info</h5>
+    <h5 style="margin:6px 2px 2px 6px;">Info & Disclaimer</h5>
     <ul style="padding: 1px 0 1px 20px;font-size:14px;margin-bottom:2px;">
+      <li style="margin-right:0px;margin-bottom:3px;"><b>!This is Unoffical AnonFiles client for KaiOS!</b></li>
       <li style="margin-right:0px;margin-bottom:3px;">Do not fill in keyword fields to reset search results</li>
-      <li style="margin-right:0px;margin-bottom:3px;">Remove the file from your device does not remove it on cloud server</li>
+      <li style="margin-right:0px;margin-bottom:3px;">Remove the file(cloud file metadata) from your device does not remove it from cloud server</li>
     </ul>
     <h5 style="margin:6px 2px 2px 6px;">Refresh Archive</h5>
     <ul style="padding: 1px 0 1px 20px;font-size:14px;margin-bottom:2px;">
@@ -12,7 +13,7 @@
     </ul>
     <h5 style="margin:6px 2px 2px 6px;">Files Archive</h5>
     <ul style="padding: 1px 0 1px 20px;font-size:14px;margin-bottom:2px;">
-      <li style="margin-right:0px;margin-bottom:3px;">All files in your device storages was grouped by MIME/type</li>
+      <li style="margin-right:0px;margin-bottom:3px;">All files inside your device storages was grouped by MIME/type</li>
     </ul>
   </div>
 </div>
