--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
   </style>
   {{#empty}}
     <div style="height:100%;text-align:center;font-weight:bold;display:flex;flex-direction:column;justify-content:center;align-items:center;">
-      <div><p>Please read User Guide.</p><p>Goto Menu > Guide</p></div>
+      <div><p>Please read User Guide.</p><p>Goto Menu > User Guide</p></div>
     </div>
   {{/empty}}
   {{^empty}}
