--- a/templates/guide.html
+++ b/templates/guide.html
@@ -1,19 +1,24 @@
 <div class="kui-flex-wrap">
   <style>.kui-software-key{height:0px}#__kai_router__{height:266px!important;}.kui-router-m-bottom{margin-bottom:0px!important;}</style>
   <div class="kai-container" style="margin:2px;">
-    <h5 style="margin:6px 2px 2px 6px;">Info & Disclaimer</h5>
-    <ul style="padding: 1px 0 1px 20px;font-size:14px;margin-bottom:2px;">
-      <li style="margin-right:0px;margin-bottom:3px;"><b>!This is Unoffical AnonFiles client for KaiOS!</b></li>
-      <li style="margin-right:0px;margin-bottom:3px;">Do not fill in keyword fields to reset search results</li>
-      <li style="margin-right:0px;margin-bottom:3px;">Remove the file(cloud file metadata) from your device does not remove it from cloud server</li>
-    </ul>
     <h5 style="margin:6px 2px 2px 6px;">Refresh Archive</h5>
     <ul style="padding: 1px 0 1px 20px;font-size:14px;margin-bottom:2px;">
       <li style="margin-right:0px;margin-bottom:3px;">Run this everytime you add/remove any files from your device storages</li>
     </ul>
     <h5 style="margin:6px 2px 2px 6px;">Files Archive</h5>
     <ul style="padding: 1px 0 1px 20px;font-size:14px;margin-bottom:2px;">
-      <li style="margin-right:0px;margin-bottom:3px;">All files inside your device storages was grouped by MIME/type</li>
+      <li style="margin-right:0px;margin-bottom:3px;">All files inside your device storages was grouped by MIME/file type</li>
+    </ul>
+    <h5 style="margin:6px 2px 2px 6px;">Info</h5>
+    <ul style="padding: 1px 0 1px 20px;font-size:14px;margin-bottom:2px;">
+      <li style="margin-right:0px;margin-bottom:3px;">Do not fill in keyword fields to reset search results</li>
+      <li style="margin-right:0px;margin-bottom:3px;">Remove the file(cloud file metadata) from your device, does not remove it from cloud server</li>
+      <li style="margin-right:0px;margin-bottom:3px;">Your files will remain online for 30 days</li>
+    </ul>
+    <h5 style="margin:6px 2px 2px 6px;">Disclaimer</h5>
+    <ul style="padding: 1px 0 1px 20px;font-size:14px;margin-bottom:2px;">
+      <li style="margin-right:0px;margin-bottom:3px;"><b>Your file will be uploaded to Ufile.io</b></li>
+      <li style="margin-right:0px;margin-bottom:3px;"><b>Kloud Storage not affiliated with Ufile.io</b></li>
     </ul>
   </div>
 </div>
