drop Web/MozActivity

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,8 @@
       text-overflow: ellipsis;
     }
   </style>
+  <a id="xtvt_sms" style="width:0px;height:0px;display:none;">SMS</a>
+  <a id="xtvt_email" style="width:0px;height:0px;display:none;">EMAIL</a>
   {{#empty}}
     <div style="height:100%;text-align:center;font-weight:bold;display:flex;flex-direction:column;justify-content:center;align-items:center;">
       <div><p>Please read User Guide.</p><p>Goto Menu > User Guide</p></div>
